remove cp doc, update repository to directory

--- a/help.html
+++ b/help.html
@@ -42,22 +42,7 @@
         <div class="help-accordion-wrapper">
             <button class="help-accordion-btn" tabindex="0" id="btn-1">How does the library search feature work?</button>
             <div class="help-accordion-panel">
-                <h3><i class="fa-solid fa-magnifying-glass"></i> Keywords</h3>
-                    <ul>
-                        <li>Searches are not case sensitive and ignore diacritics.</li>
-                        <li>Truncation, wildcards, quotation marks, and lemmatization are not supported.</li>
-                        <li>It is preferable to search with singular rather than plural nouns.</li>
-                        <li>Search terms separated by a space are treated as independent search terms and are linked with the AND operator. Therefore, all search terms must appear in at least one description field for a resource to be returned in the results.</li>
-                    </ul>
-                <h3><i class="fa-solid fa-sliders"></i> Filters</h3>
-                    <ul>
-                    <li>When a user selects multiple values from the same filter, such as two languages, LACLI uses OR logic. This means it shows results that match at least one of the selected values (e.g., Spanish OR English).</li>
-                    <li>When a user selects values from different filters, like a format and a language, LACLI uses AND logic. This narrows the results to only those that match all of the selected criteria (e.g., Books AND Spanish).</li>
-                    </ul>
-                <h3><i class="fa-solid fa-floppy-disk"></i> Saving</h3>
-                    <ul>
-                    <li>There are two ways to save a search. First, copy the url. Only keywords, and not filters, are captured in the url. Second, download the records currently displayed as a JSON file to your computer via the Download button.</li>
-                    </ul>
+                <div id="searchFeatureInfo"></div>
             </div>
             <button class="help-accordion-btn" tabindex="0" id="btn-2">What are some questions I can answer with LACLI?</button>
             <div id="help-questions" class="help-accordion-panel">
@@ -77,7 +62,7 @@
                     <li class="sample-question-suggestion" id="li-2-10">Try searching: ephemera Caribbean</li>
                 </ul>
             </div>
-            <button class="help-accordion-btn" tabindex="0" id="btn-3">What types of resources are in the repository?</button>
+            <button class="help-accordion-btn" tabindex="0" id="btn-3">What types of resources are in the directory?</button>
             <div class="help-accordion-panel">
                 <ul>
                     <li id="li-3-1">Resources with full content.</li>
@@ -93,7 +78,7 @@
                 <p id="li-4">Resources are cataloged according to the <a href="https://docs.google.com/document/d/1tYwdb74lGH7BbXzmO27iWkIHyogtuBi5PoMMwfb__Fk/edit?usp=sharing" target="_blank"> LACLI Guidelines</a>. <br><br>Metadata fields include Format, Language, Geographic Area, Time Period, Subjects, among others. The content of most fields is in English. The fields presented in their original language are Resource Title, Country, Language, Institutional Host, and Creators. Subject access is available using the <a href="https://hapi.ucla.edu/about" target="_blank">Hispanic American Periodicals Index (HAPI)</a> Subject Headings, which is a trilingual controlled vocabulary based on Library of Congress Subject Headings and translated into Spanish and Portuguese.
                 </p>
             </div>
-            <button class="help-accordion-btn" tabindex="0" id="btn-5">Can I suggest resources to the repository?</button>
+            <button class="help-accordion-btn" tabindex="0" id="btn-5">Can I suggest resources to the directory?</button>
             <div class="help-accordion-panel">
                 <p id="li-5">Yes! Please use <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJGksX1uBHoNNTHSPsRv9wQp4K0yYc4a-OmLMUrciXYqfwMg/viewform" target="_blank">this form to submit</a> your favorite online resources or a project you've developed.</p>
             </div>
