--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
                     <a href="https://salalm.org/lane" target="_blank"><img src="media/lane-logo.jpg" alt="LANE logo"></a>
                 </div>
                 <div class="collaborating-contributors">
-                    <h3 id="collaborating-institutions">Collaborating Institutions</h3>
+                    <h3 id="collaborating-institutions">Collaborating Institution</h3>
                     <a href="https://biblioteca.colmex.mx/" target="_blank"><img src="media/colmex-bib-logo.png" alt="Biblioteca Daniel Cosío Villegas"></a>
-                    <a href="https://cpdoc.fgv.br/" target="_blank"><img src="media/FGV-CPDOC.png" alt="FGV CPDOC"></a>
                 </div>
              </div>
 
